Update : 요청 시 배열 대신 문자열
